Fix navbar box spacing

--- a/eagle/static/css/index.css
+++ b/eagle/static/css/index.css
@@ -39,8 +39,10 @@ body {
 
 .nav-menu-item {
     display: inline-block;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: -2px;
+    margin-right: -2px;
+    padding-left: 9px;
+    padding-right: 9px;
 }
 
 .nav-menu-item:hover {
